--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Lato|Poppins&display=swap');
+
 body{
     background: #eee;
-    font-family: 'Nunito SemiBold';
+    font-family: 'Lato', sans-serif;
+    max-width: 100vw;
+    overflow: hidden;
+}
+body #root button {
+    font-family: 'Poppins', sans-serif;
+}
+
+body .MuiButton-root {
+    text-transform: none;
 }
